hphp/hack/test/typecheck/lsb_property_visibility.php.exp
File "lsb_property_visibility.php", line 11, characters 8-11:
You cannot access this property (Typing[4112])
  File "lsb_property_visibility.php", line 5, characters 18-20:
  This property is private
File "lsb_property_visibility.php", line 12, characters 8-11:
You cannot access this property (Typing[4112])
  File "lsb_property_visibility.php", line 5, characters 18-20:
  This property is private
